# Type-R

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml
patch/: DeepSolo.patch  MaskTextSpotterV3.patch  VLMEvalKit.patch  apex.patch  craft-text-detector.patch  detectron2.patch
script/: apply_patch.sh  clean_patch.sh  demo.sh  marioevalbench_best.sh  marioevalbench_trial.sh  test.sh
src/type_r_app/: __main__.py  visualizer.py
src/type_r_app/config/: demo.yaml  evaluation.yaml  layout_correction.yaml  marioevalbench_best.yaml  marioevalbench_trial.yaml  prompt_augmentation.yaml  t2i.yaml  typo_correction.yaml
src/type_r_app/config/adjuster/: default.yaml  layout_prompter.yaml  naive_baseline.yaml
src/type_r_app/config/dataset/: marioeval.yaml  marioeval_trial.yaml  prompt.yaml
src/type_r_app/config/evaldata/: directory.yaml
src/type_r_app/config/evaluation/: opencole_eval.yaml  opencole_independent.yaml  rating_design_quality.yaml  rating_text_image_matching.yaml  rating_text_quality.yaml  voting_design_quality.yaml  voting_text_image_matching.yaml  voting_text_quality.yaml
src/type_r_app/config/ocr_detection/: craft.yaml  deepsolo.yaml  hisam.yaml  masktextspotterv3.yaml  paddleocr.yaml
src/type_r_app/config/ocr_recognition/: clip4str.yaml  clovarecog.yaml  masktextspotterv3.yaml  modelscope.yaml  trocr.yaml
src/type_r_app/config/t2i/: dalle3.yaml  flux.yaml  geminiimg.yaml  gptimg.yaml  sd3.yaml  sd3dot5.yaml
src/type_r_app/config/text_editor/: anytext.yaml  fluxfill.yaml  mostel.yaml  skiaeditor.yaml  textctrl.yaml  udifftext.yaml
src/type_r_app/launcher/: evaluation.py  layout_correction.py  prompt_augmentation.py  t2i.py  typo_correction.py
tests/: conftest.py  test.sh
tests/type_r_app/: test_brushup.py  test_wordchain.py
tools/: dl_resources.py  result2xlsx.py
(+3 files in other folders)
